# motion

./: .devcontainer.json  .gitignore  README.md  api-docs.txt  context.md  docker-compose.yml  docs.md  serve_with_cors.py  startup.sh  stop.sh  test_elev.py
MotionDemo/: README.md  app-fixed.js  app.js  demo-fixed.html  index.html  styles.css  test_elev.js  waypoints-sf.js  waypoints-sf.json
api/: Dockerfile  build_tiles.py  dev_server.py  pyproject.toml  test_runner.py
api/migrations/: env.py
api/migrations/versions/: 001_initial.py
api/motion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/src/: config.py  main.py
api/src/middleware/: errors.py  idempotency.py  rate_limit.py
api/src/models/: driver.py  enrichment.py  errors.py  request.py  response.py  telemetry.py  vehicle.py
api/src/routes/: driver_state.py  google_compat.py  routes.py  telemetry.py
api/src/scripts/: load_zones.py  prewarm_elevation.py
api/src/services/: cache.py  curvature.py  elevation.py  enrichment.py  physics.py  translator.py  valhalla.py  webhooks.py  worker.py  zones.py
api/src/storage/: postgres.py  redis.py
api/tests/: conftest.py  test_enrichment.py  test_google_compat.py  test_physics.py  test_routes.py  test_translator.py
api/tests/fixtures/: sample_requests.json  valhalla_response.json
docs/: development.mdx  docs.json  index.mdx  quickstart.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/endpoint/: create-route.mdx  delete-route.mdx  get-route.mdx  get-telemetry.mdx  webhook.mdx
secondDemo/: app.js  index.html  style.css
(+6 files in other folders)
