[project]
name = "motion"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.131",
    "uvicorn[standard]>=0.41",
    "httpx>=0.28",
    "asyncpg>=0.31",
    "redis>=7.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "shapely>=2.0",
    "numpy>=2.4",
    "python-ulid>=3.1",
    "alembic>=1.18",
    "polyline>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
